Working on user login

--- a/src/main/resources/static/pages/login.html
+++ b/src/main/resources/static/pages/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <title>Login | Sensor Web</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,6 +58,7 @@
                                 <!-- Change this to a button or input when using this as a form -->
                                 <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
                             </fieldset>
+                            <a href="signup.html">New to Sensor Web? Sign up!</a>
                         </form>
                     </div>
                 </div>
@@ -76,6 +77,8 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
+    <script src="../js/helpers.js"></script>
+    <script src="../js/login.js"></script>
 
 </body>
 
